--- a/EzSchool/Views/ClassTables/Details.cshtml
+++ b/EzSchool/Views/ClassTables/Details.cshtml
@@ -1,34 +1,29 @@
 ﻿@model DatabaseAccess.ClassTable
 
 @{
-    ViewBag.Title = "Class";
+    ViewData["Title"] = "Class Details";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>Class</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Class Title
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            Status
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-
-    </dl>
+<div class="card shadow-lg">
+    <div class="card-header bg-gradient-primary text-white">
+        <h4 class="card-title">Class Details</h4>
+    </div>
+    <div class="card-body">
+        <table class="table table-bordered table-hover text-center">
+            <tbody>
+                <tr>
+                    <th class="bg-light">Class Title</th>
+                    <td>@Html.DisplayFor(model => model.Name)</td>
+                </tr>
+                <tr>
+                    <th class="bg-light">Status</th>
+                    <td>@Html.DisplayFor(model => model.IsActive)</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="card-footer text-center">
+        @Html.ActionLink("Edit", "Edit", new { id = Model.ClassID }, new { @class = "btn btn-primary mx-2" })
+        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-secondary mx-2" })
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ClassID }, new {@class = "btn btn-primary"}) 
-    @Html.ActionLink("Back to List", "Index", null , new {@class = "btn btn-default"})
-</p>
