--- a/EzSchool/Views/SubmissionFeeTables/Index.cshtml
+++ b/EzSchool/Views/SubmissionFeeTables/Index.cshtml
@@ -42,7 +42,7 @@
                             Amount
                         </th>
                         <th>
-                            User
+                            Created By
                         </th>
 
                         <th>Actions</th>
