--- a/EzSchool/Views/ClassSubjectTables/Details.cshtml
+++ b/EzSchool/Views/ClassSubjectTables/Details.cshtml
@@ -1,50 +1,37 @@
 ﻿@model DatabaseAccess.ClassSubjectTable
 
 @{
-    ViewBag.Title = "Subject";
+    ViewData["Title"] = "Class Subject Details";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>ClassSubjectTable</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Class Subject Title
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            Class Title
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ClassTable.Name)
-        </dd>
-
-        <dt>
-            Subject Title
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SubjectTable.Name)
-        </dd>
-        <dt>
-            Status
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-
-
-
-    </dl>
+<div class="card shadow-lg">
+    <div class="card-header bg-gradient-primary text-white">
+        <h4 class="card-title">Class Subject Details</h4>
+    </div>
+    <div class="card-body">
+        <table class="table table-bordered table-hover text-center">
+            <tbody>
+                <tr>
+                    <th class="bg-light">Class Subject Title</th>
+                    <td>@Html.DisplayFor(model => model.Name)</td>
+                </tr>
+                <tr>
+                    <th class="bg-light">Class Title</th>
+                    <td>@Html.DisplayFor(model => model.ClassTable.Name)</td>
+                </tr>
+                <tr>
+                    <th class="bg-light">Subject Title</th>
+                    <td>@Html.DisplayFor(model => model.SubjectTable.Name)</td>
+                </tr>
+                <tr>
+                    <th class="bg-light">Status</th>
+                    <td>@Html.DisplayFor(model => model.IsActive)</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="card-footer text-center">
+        @Html.ActionLink("Edit", "Edit", new { id = Model.ClassSubjectID }, new { @class = "btn btn-primary mx-2" })
+        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-secondary mx-2" })
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ClassSubjectID } , new {@class = "btn btn-primary"}) 
-    @Html.ActionLink("Back to List", "Index",null , new {@class = "btn btn-default"})
-</p>
