--- a/EzSchool/Views/ClassTables/Delete.cshtml
+++ b/EzSchool/Views/ClassTables/Delete.cshtml
@@ -1,40 +1,39 @@
 ﻿@model DatabaseAccess.ClassTable
-
+@if (TempData["ErrorMessage"] != null)
+{
+    <script>
+        alert('@TempData["ErrorMessage"]');
+    </script>
+}
 @{
-    ViewBag.Title = "Delete";
+    ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Class</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Class Title
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-           Status
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" /> 
-            @Html.ActionLink("Back to List", "Index",null,new {@class = "btn btn-default"})
-        </div>
-    }
+<div class="card shadow-lg">
+    <div class="card-header bg-gradient-primary text-white">
+        <h4 class="card-title">Class Details</h4>
+    </div>
+    <div class="card-body">
+        <h3>Are you sure you want to delete this?</h3>
+        <table class="table table-bordered table-hover text-center">
+            <tbody>
+                <tr>
+                    <th class="bg-light">Class Title</th>
+                    <td>@Html.DisplayFor(model => model.Name)</td>
+                </tr>
+                <tr>
+                    <th class="bg-light">Status</th>
+                    <td>@Html.DisplayFor(model => model.IsActive)</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="card-footer text-center">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <input type="submit" value="Delete" class="btn btn-danger mx-2" />
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-secondary mx-2" })
+        }
+    </div>
 </div>
