--- a/EzSchool/Views/ClassTables/Index.cshtml
+++ b/EzSchool/Views/ClassTables/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered text-center align-middle"  id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
                         <th>
@@ -29,13 +29,13 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td>
+                            <td class="align-middle">
                                 @Html.DisplayFor(modelItem => item.Name)
                             </td>
-                            <td>
+                            <td class="align-middle">
                                 @Html.DisplayFor(modelItem => item.IsActive)
                             </td>
-                            <td>
+                            <td class="btn-group align-middle">
                                 @Html.ActionLink("Edit", "Edit", new { id = item.ClassID } , new {@class = "btn btn-primary"}) 
                                 @Html.ActionLink("Details", "Details", new { id = item.ClassID }, new {@class = "btn btn-info"})
                                 @Html.ActionLink("Delete", "Delete", new { id = item.ClassID }, new {@class = "btn btn-danger"})
