--- a/EzSchool/Views/StaffTables/Create.cshtml
+++ b/EzSchool/Views/StaffTables/Create.cshtml
@@ -110,10 +110,13 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Gender, "Enter Gender", htmlAttributes: new { @class = "control-label" })
-                            @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+                        @Html.LabelFor(model => model.Gender, "Enter Gender", htmlAttributes: new { @class = "control-label col-md-5" })
+                        <div class="col">
+                            @Html.DropDownList("Gender", new List<SelectListItem>
+                                {
+                                    new SelectListItem{ Text="Male", Value="Male"},
+                                    new SelectListItem{ Text="Female", Value="Female"}
+                                }, null, new { @class = "form-control" })
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -178,14 +181,6 @@
                         </div>
                     </div>
                 </div>
-
-                @*<div class="form-group">
-                        @Html.LabelFor(model => model.RegistrationDate, htmlAttributes: new { @class = "control-label" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.RegistrationDate, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.RegistrationDate, "", new { @class = "text-danger" })
-                        </div>
-                    </div>*@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-4">
