--- a/EzSchool/Views/StaffTables/Edit.cshtml
+++ b/EzSchool/Views/StaffTables/Edit.cshtml
@@ -111,11 +111,20 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Gender, "Enter Gender", htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+                    @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-5" })
+                    <div class="col">
+                        @*@Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })*@
+                        @*@Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })*@
+                        @Html.DropDownList("Gender", new List<SelectListItem>
+                        {
+                            new SelectListItem{ Text="Male", Value="Male"},
+                            new SelectListItem{ Text="Female", Value="Female"}
+                        }, "--- Select ---", new { @class = "form-control" })
+
+
                     </div>
+
+
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
@@ -191,6 +200,7 @@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-4">
                     <input type="submit" value="Save" class="btn btn-primary" />
+                    @Html.ActionLink("Back", "Index",null,new {@class="btn btn-default"})
                 </div>
             </div>
         </div>
@@ -198,5 +208,5 @@
     </div>
 </div>
 <div>
-    @Html.ActionLink("Back", "Index")
+
 </div>
