--- a/EzSchool/Views/StudentPromotTables/Create.cshtml
+++ b/EzSchool/Views/StudentPromotTables/Create.cshtml
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.ProgrameSessionID, "Select Student Session", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.ProgrameSessionID, "Select Session", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("ProgrameSessionID", null, htmlAttributes: new { @class = "form-control", @id = "ProgrameSessionID" })
                         @Html.ValidationMessageFor(model => model.ProgrameSessionID, "", new { @class = "text-danger" })
