--- a/EzSchool/Views/SubmissionFeeTables/Create.cshtml
+++ b/EzSchool/Views/SubmissionFeeTables/Create.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.StudentID, "Select Student", htmlAttributes: new { @class = "control-label col-md-5" })
                 <div class="col-md-5">
-                    @Html.DropDownList("StudentID", null, htmlAttributes: new { @class = "form-control", @id = "StudentID" })
+                    @Html.DropDownList("StudentID", null, htmlAttributes: new { @class = "form-control", @id = "StudentID", @readonly = "readonly" })
                     @Html.ValidationMessageFor(model => model.StudentID, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -46,7 +46,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ProgrameID, "Select Program", htmlAttributes: new { @class = "control-label col-md-5" })
                 <div class="col-md-5">
-                    @Html.DropDownList("ProgrameID", null, htmlAttributes: new { @class = "form-control", @id = "ProgrameID" })
+                    @Html.DropDownList("ProgrameID", null, htmlAttributes: new { @class = "form-control", @id = "ProgrameID", @readonly ="readonly" })
                     @Html.ValidationMessageFor(model => model.ProgrameID, "", new { @class = "text-danger" })
                 </div>
             </div>
