--- a/EzSchool/Views/UserTables/Index.cshtml
+++ b/EzSchool/Views/UserTables/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered text-center align-middle" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
                         <th>
@@ -37,35 +37,35 @@
                         <th>
                             Type Name
                         </th>
-                        <th></th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td>
+                            <td class="align-middle" >
                                 @Html.DisplayFor(modelItem => item.FullName)
                             </td>
-                            <td>
+                            <td class="align-middle">
                                 @Html.DisplayFor(modelItem => item.UserName)
                             </td>
                             @*<td>
                                 @Html.DisplayFor(modelItem => item.Password)
                             </td>*@
-                            <td>
+                            <td class="align-middle">
                                 @Html.DisplayFor(modelItem => item.ContactNo)
                             </td>
-                            <td>
+                            <td class="align-middle">
                                 @Html.DisplayFor(modelItem => item.EmailAddress)
                             </td>
-                            <td>
+                            <td class="align-middle">
                                 @Html.DisplayFor(modelItem => item.Address)
                             </td>
-                            <td>
+                            <td class="align-middle">
                                 @Html.DisplayFor(modelItem => item.UserTypeTable.TypeName)
                             </td>
-                            <td class="btn btn-group-vertical">
+                            <td class="btn btn-group-vertical align-middle">
                                 @Html.ActionLink("Edit", "Edit", new { id = item.UserID }, new { @class = "btn btn-primary" })
                                 @Html.ActionLink("Details", "Details", new { id = item.UserID }, new { @class = "btn btn-info" })
                                 @Html.ActionLink("Delete", "Delete", new { id = item.UserID }, new { @class = "btn btn-danger" })
