--- a/EzSchool/Views/Shared/_Layout.cshtml
+++ b/EzSchool/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="~/Home/About">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-university"></i>
                     <span>Home</span>
                 </a>
             </li>
@@ -87,13 +87,22 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Student Registration
+                @{ 
+                    if (usertypeid == 1)
+                    {
+                        @:Student Registration
+                    }
+                    else
+                    {
+                        @:Information
+                    }
+                }
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseStudent" aria-expanded="true" aria-controls="collapseStudent">
-                    <i class="fas fa-fw fa-chart-area"></i>
+                    <i class="fas fa-fw fa-user"></i>
                     <span>Student's</span>
                 </a>
                 <div id="collapseStudent" class="collapse" aria-labelledby="headingStudent data-parent="#accordionSidebar">
@@ -179,14 +188,14 @@
                     <!-- Nav Item - Pages Collapse Menu -->
                     <li class="nav-item">
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseStaff" aria-expanded="true" aria-controls="collapseStaff">
-                            <i class="fas fa-fw fa-chart-area"></i>
-                            <span>Employee's</span>
+                            <i class="fas fa-fw fa-chalkboard-teacher"></i>
+                            <span>Teacher's</span>
                         </a>
                         <div id="collapseStaff" class="collapse" aria-labelledby="headingStaff data-parent="#accordionSidebar">
                             <div class="bg-white py-2 collapse-inner rounded">
                                 <h6 class="collapse-header">Staff Registration:</h6>
-                                @Html.ActionLink("Staff Registeration", "Create", "StaffTables", null, new { @class = "collapse-item" })
-                                @Html.ActionLink("All Staff", "Index", "StaffTables", null, new { @class = "collapse-item" })
+                                @Html.ActionLink("Teacher Registeration", "Create", "StaffTables", null, new { @class = "collapse-item" })
+                                @Html.ActionLink("All Teacher", "Index", "StaffTables", null, new { @class = "collapse-item" })
 
 
                                 @*<div class="collapse-divider"></div>
@@ -196,7 +205,7 @@
 
                                 <div class="collapse-divider"></div>
                                 <h6 class="collapse-header">Salary:</h6>
-                                @Html.ActionLink("Employee Salary", "Create", "EmployeeSalaryTables", null, new { @class = "collapse-item" })
+                                @Html.ActionLink("Teacher Salary", "Create", "EmployeeSalaryTables", null, new { @class = "collapse-item" })
                                 @Html.ActionLink("Salaries Record", "Index", "EmployeeSalaryTables", null, new { @class = "collapse-item" })
 
                             </div>
@@ -235,7 +244,7 @@
                     <!-- Nav Item - Utilities Collapse Menu -->
                     <li class="nav-item">
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-                            <i class="fas fa-fw fa-wrench"></i>
+                            <i class="fas fa-fw fa-tools"></i>
                             <span>Configuration</span>
                         </a>
                         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
@@ -252,7 +261,7 @@
                     <!-- Nav Item - Session Collapse Menu -->
                     <li class="nav-item">
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSession" aria-expanded="true" aria-controls="collapseSession">
-                            <i class="fas fa-fw fa-wrench"></i>
+                            <i class="fas fa-fw fa-calendar-alt"></i>
                             <span>Session's</span>
                         </a>
                         <div id="collapseSession" class="collapse" aria-labelledby="headingSession" data-parent="#accordionSidebar">
@@ -265,7 +274,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseClass" aria-expanded="true" aria-controls="collapseClass">
-                            <i class="fas fa-fw fa-wrench"></i>
+                            <i class="fas fa-fw fa-chalkboard"></i>
                             <span>Class's</span>
                         </a>
                         <div id="collapseClass" class="collapse" aria-labelledby="headingClass" data-parent="#accordionSidebar">
@@ -290,7 +299,7 @@
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
+                    <i class="fas fa-fw fa-edit"></i>
                     <span>Exam Setting</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
@@ -340,7 +349,7 @@
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseEvent" aria-expanded="true" aria-controls="collapseEvent">
-                    <i class="fas fa-fw fa-folder"></i>
+                    <i class="fas fa-fw fa-sliders-h"></i>
                     <span>Event Setting</span>
                 </a>
                 <div id="collapseEvent" class="collapse" aria-labelledby="headingEvent" data-parent="#accordionSidebar">
@@ -373,7 +382,7 @@
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTimeTable" aria-expanded="true" aria-controls="collapseTimeTable">
-                    <i class="fas fa-fw fa-folder"></i>
+                    <i class="fas fa-fw fa-edit"></i>
                     <span>Time Table Setting</span>
                 </a>
                 <div id="collapseTimeTable" class="collapse" aria-labelledby="headingTimeTable data-parent="#accordionSidebar">
@@ -405,7 +414,7 @@
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseExpenses" aria-expanded="true" aria-controls="collapseExpenses">
-                    <i class="fas fa-fw fa-folder"></i>
+                    <i class="fas fa-fw fa-money-bill-wave"></i>
                     <span>Expenses</span>
                 </a>
                 <div id="collapseExpenses" class="collapse" aria-labelledby="headingExpenses data-parent="#accordionSidebar">
@@ -456,7 +465,7 @@
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseReport" aria-expanded="true" aria-controls="collapseReport">
-                    <i class="fas fa-fw fa-chart-area"></i>
+                    <i class="fas fa-fw fa-envelope"></i>
                     <span>Basic Reports</span>
                 </a>
                 <div id="collapseReport" class="collapse" aria-labelledby="headingReport data-parent="#accordionSidebar">
