--- a/EzSchool/Views/SubjectTables/Index.cshtml
+++ b/EzSchool/Views/SubjectTables/Index.cshtml
@@ -30,7 +30,7 @@
                             @Html.DisplayNameFor(model => model.TotalMarks)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.UserTable.FullName)
+                            Created By
                         </th>
                         <th></th>
                     </tr>
