--- a/EzSchool/Views/TimeTblTables/Index.cshtml
+++ b/EzSchool/Views/TimeTblTables/Index.cshtml
@@ -198,7 +198,8 @@
                                            data-content="event-@item.TimeTableID"
                                            data-event="event-@item.ClassSubjectTable.SubjectID"
                                            href="#0">
-                                            <em class="cd-schedule__name">@item.ClassSubjectTable.Name</em>
+                                            <em class="cd-schedule__name" style="color: black;">@item.ClassSubjectTable.Name</em>
+                                            <em style="font-weight: bold; color: #000000; font-size: 0.7em;">Teacher: @item.StaffTable.Name</em>
                                         </a>
                                     </li>
                                 }
