--- a/EzSchool/Views/ProgrameSessionTables/Index.cshtml
+++ b/EzSchool/Views/ProgrameSessionTables/Index.cshtml
@@ -31,7 +31,7 @@
                             Description
                         </th>
                         <th>
-                            User
+                            Created By
                         </th>
                         <th>Actions</th>
                     </tr>
